# notif-service

./: Cargo.toml  README.md
config/: config.yml
src/: appconfig.rs  main.rs
src/app/: mod.rs  otp.rs
src/models/: dtos.rs  mod.rs
src/utils/: mod.rs  util.rs
