[package]
name = "notif-worker"
version = "0.1.0"
authors = ["Prateek Kumar <prateek.kr85@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-rt = "1.1.1"
actix-web = "2.0.0"
kafka = "0.8"
amiquip = "0.3.3"
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1.0.53"
actix-cors = "0.2.0"
dotenv = "0.15"
env_logger = "0.7.1"
actix-http = "1.0.1"
futures = "0.3.5"